--- a/flux-config/harvis/base/helmrelease.yaml
+++ b/flux-config/harvis/base/helmrelease.yaml
@@ -2,11 +2,11 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: harvis-ai
+  name: harvis-prod
   namespace: ai-agents
 spec:
   interval: 5m
-  releaseName: harvis-ai
+  releaseName: harvis-prod
   chart:
     spec:
       chart: ./harvis-helm-chart
@@ -16,97 +16,15 @@ spec:
         name: harvis-source
         namespace: flux-system
   values:
-    # Override values from the Helm chart
-    namespace: ai-agents
-    
-    # Backend configuration with environment variables
-    backend:
-      enabled: false  # Using merged deployment
-      env:
-        OLLAMA_CLOUD_URL: "https://coyotegpt.ngrok.app/ollama"
-        OLLAMA_API_KEY: ""  # Set via external secret or --set flag
-        OPENAI_API_KEY: ""
-    
-    # Merged Ollama + Backend deployment
+    # Minimal overrides - let most values come from values.yaml and secrets.yaml
+    # Only override image tags for automated updates
     mergedOllamaBackend:
-      enabled: true
       image:
-        repository: dulc3/jarvis-backend
         tag: latest # {"$imagepolicy": "flux-system:harvis-backend-policy:tag"}
-        pullPolicy: Always
-      resources:
-        gpu: 1
-    
-    # Frontend configuration
-    frontend:
-      enabled: true
-      image:
-        repository: dulc3/jarvis-frontend
-        tag: latest # {"$imagepolicy": "flux-system:harvis-frontend-policy:tag"}
-        pullPolicy: Always
-    
-    # PostgreSQL configuration
-    postgresql:
-      enabled: true
-      persistence:
-        enabled: true
-        size: 20Gi
-        accessMode: ReadWriteOnce
-        storageClass: ""
-    
-    # n8n configuration
-    n8n:
-      enabled: true
-      persistence:
-        enabled: true
-        size: 5Gi
-        accessMode: ReadWriteOnce
-        storageClass: ""
 
-    # Service account configuration
-    serviceAccount:
-      create: true
-      name: ""
-      annotations: {}
-    
-    # Ingress configuration
-    ingress:
-      enabled: true
-      className: "nginx"
-      annotations:
-        cert-manager.io/cluster-issuer: "letsencrypt-prod"
-        nginx.ingress.kubernetes.io/proxy-body-size: "50m"
-        nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
-        nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
-        nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
-      tls:
-        - hosts:
-            - harvis.dulc3.tech
-            - harvis-api.dulc3.tech
-            - n8n.dulc3.tech
-          secretName: harvis-tls
-      hosts:
-        - host: harvis.dulc3.tech
-          paths:
-            - path: /
-              pathType: Prefix
-              service:
-                name: nginx
-                port: 80
-        - host: harvis-api.dulc3.tech
-          paths:
-            - path: /api
-              pathType: Prefix
-              service:
-                name: merged-backend
-                port: 8000
-        - host: n8n.dulc3.tech
-          paths:
-            - path: /
-              pathType: Prefix
-              service:
-                name: n8n
-                port: 5678
+    frontend:
+      image:
+        tag: latest # {"$imagepolicy": "flux-system:harvis-frontend-policy:tag"}
   
   # Automated upgrade configuration
   upgrade:
