--- a/flux-config/harvis/flux-kustomization.yaml
+++ b/flux-config/harvis/flux-kustomization.yaml
@@ -15,6 +15,6 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2
       kind: HelmRelease
-      name: harvis-ai
+      name: harvis-prod
       namespace: ai-agents
   timeout: 5m0s
